feat: logo style

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Starter</title>
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
+    <title>Generative Art</title>
     <meta name="description" content="Opinionated Vite Starter Template">
   </head>
   <body class="font-sans dark:text-white">
